RESOLVED FIXED36803
'Inline-table' workaround for <ruby> broken with ruby support
https://bugs.webkit.org/show_bug.cgi?id=36803
Summary 'Inline-table' workaround for <ruby> broken with ruby support
Roland Steiner
Reported 2010-03-29 21:02:45 PDT
As described in the Chromium bug comment at http://code.google.com/p/chromium/issues/detail?id=27659#c3 it seems that the ruby support as implemented broke the CSS 'inline-table' workaround for ruby used by some sites (e.g., http://grammar.nihongoresources.com).
Attachments
patch - use ruby rendering only if 'display' hasn't been altered (7.12 KB, patch)
2010-03-29 22:08 PDT, Roland Steiner
darin: review+
commit-queue: commit-queue-
Roland Steiner
Comment 1 2010-03-29 22:08:24 PDT
Created attachment 52003 [details] patch - use ruby rendering only if 'display' hasn't been altered Patch: Instantiate ruby renderers only if 'display' value is either 'inline' or 'block'. Don't use ruby renderers for other display values such as 'inline-table'.
WebKit Commit Bot
Comment 2 2010-03-31 00:32:20 PDT
Comment on attachment 52003 [details] patch - use ruby rendering only if 'display' hasn't been altered Rejecting patch 52003 from commit-queue. Failed to run "['/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', '--reviewer', 'Darin Adler', '--force']" exit_code: 2 patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/fast/ruby/ruby-inline-table.html patching file LayoutTests/platform/mac/fast/ruby/ruby-inline-table-expected.checksum patch: **** Only garbage was found in the patch input. patching file LayoutTests/platform/mac/fast/ruby/ruby-inline-table-expected.txt patching file WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebCore/rendering/RenderObject.cpp Full output: http://webkit-commit-queue.appspot.com/results/1581103
Roland Steiner
Comment 3 2010-03-31 21:14:21 PDT
Landed as rev. 56890.
Note You need to log in before you can comment on or make changes to this bug.