2010-03-29  Roland Steiner  <rolandsteiner@chromium.org>

Reviewed by Darin Adler.

        Bug 36803 - 'Inline-table' workaround for <ruby> broken with ruby support
        https://bugs.webkit.org/show_bug.cgi?id=36803

        Don't use ruby rendering if the underlying 'display' property has been
        changed into a value other than 'inline' or 'block' (such as 'inline-table').

        Test: fast/ruby/ruby-inline-table.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::createObject):

        Add layout test to confirm that 'inline-table' rendering is not affected
        by ruby implementation.

        * fast/ruby/ruby-inline-table.html: Added.
        * platform/mac/fast/ruby/ruby-inline-table-expected.checksum: Added.
        * platform/mac/fast/ruby/ruby-inline-table-expected.png: Added.
        * platform/mac/fast/ruby/ruby-inline-table-expected.txt: Added.

Canonical link: https://commits.webkit.org/48183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56890 268f45cc-cd09-0410-ab3c-d52691b4dbfc